objects/Plan_Note_Association__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapped_Note_Id__c</fullName>
        <label>Mapped Note Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Plan_Marketing_Id__c</fullName>
        <label>Mapped Plan Marketing Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Note__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Note</label>
        <referenceTo>SGR_Note__c</referenceTo>
        <relationshipName>Plan_Note_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>Plan_Note_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Plan Note Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan__c</columns>
        <columns>Plan_Note__c</columns>
        <columns>Mapped_Plan_Marketing_Id__c</columns>
        <columns>Mapped_Note_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Note Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Note Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>